Import of ELIZABETH/Thread-Needs-0.02 from CPAN.
gitpan-cpan-distribution: Thread-Needs
gitpan-cpan-version:      0.02
gitpan-cpan-path:         ELIZABETH/Thread-Needs-0.02.tar.gz
gitpan-cpan-author:       ELIZABETH
gitpan-cpan-maturity:     released

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,12 @@
+0.02	29 July 2002
+	Added an actual test-suite.
+
+	Added second example for inclusion in modules.
+
+	Adapted "import" so that it returns the modules that were not yet
+	marked to be saved in threads.
+
+	Fixed some documentation nits.
+
 0.01	28 July 2002
-	First version of Thread::Needs;
+	First version of Thread::Needs.
