Import of ELIZABETH/Thread-Needs-0.03 from CPAN.
gitpan-cpan-distribution: Thread-Needs
gitpan-cpan-version:      0.03
gitpan-cpan-path:         ELIZABETH/Thread-Needs-0.03.tar.gz
gitpan-cpan-author:       ELIZABETH
gitpan-cpan-maturity:     released

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+0.03	13 August 2003
+	Cleaned up Makefile.PL and updated the copyright info.  Made sure
+	the test-suite runs under strict and warnings.  Added a message
+	about warnings that may occur from AutoLoader.
+
 0.02	29 July 2002
 	Added an actual test-suite.
 
